docs/데이터파트/version3.0/명세서.md
# 데이터 파트 명세서 (v3.0)

> 담당 이동원 — 수집 · 저장 · 정제 · 전처리 · **반입 · 반출(HF)**
> (수집 현황 **화면은 2026-08-31 부로 강민석 님 담당**으로 이관)
> v3.0 · 2026-09-02 · 이전 판 [v2.1 명세서](../version2.1/명세서.md) +
> 부분판 [v2.2](../version2.2/)·[v2.3](../version2.3/)·[v2.4](../version2.4/) · [변경사항](변경사항.md)
> 팀 전체 요구사항은 [요구사항](../../요구사항/README.md)

이 문서는 **읽는 사람이 "무엇이 만들어지는가"를 먼저 알게** 쓰였습니다.
숫자에는 잰 날짜를 붙였습니다 — 수집이 돌면 숫자가 움직이기 때문입니다.

⚠️ v2.2~v2.4 는 병렬 작업 세션들이 낸 **부분판**(가이드·수정주가 명세만)입니다.
이 판이 그 조각들을 전문으로 다시 묶은 것이고, 왜 조각이 났는지는
[변경사항](변경사항.md)에 있습니다.

---

## 0. 이 파트가 끝나면 팀원이 할 수 있는 것

| 누가 | 무엇을 | 어떻게 |
|---|---|---|
| 오준영 (모델) | 학습 표를 받아 쓴다 | HF `alphastack-krx-dev` 에서 `hf_hub_download()` 한 줄 |
| 오준영 (모델) | 재무를 시점 정합으로 붙인다 | HF `alphastack-dart` 의 **pit/** 층 (시점은 `rcept_dt`) |
| 강민석 (백테스팅) | 봉인 구간이 반출물에 없음을 믿는다 | `verify_no_holdout` 이 전 파일을 전수 재검사한다 |
| 신장환 (피처) | 지표 함수에 넣을 표의 모양을 안다 | 계약 테스트가 컬럼·정렬·dtype 을 고정한다 |
| 팀 전체 | 손으로 받은 CSV 를 안전하게 들인다 | 반입 엔진이 규격으로 판정하고 보고서를 준다 |
| 팀 전체 | 발표 때 "이 숫자 어디서 났나"에 답한다 | 수집 대장 + 실행 기록 + MANIFEST 해시 |

각 기능의 줄 단위 해설은 **[핵심코드 v1.0](../../핵심코드/version1.0/)** 에
있습니다 (①수집 ②반입 ③공급 ④반출·HF). 이 문서는 전체 지도를 그립니다.

---

## 1. 하루를 따라가 보기

### 아침 — 어제 자료가 잘 들어왔나

```bash
python scripts/check_db.py        # 표 16개의 행 수·기간 한 장
python scripts/check_data.py      # 시세 품질 게이트 (설명되지 않는 이상치 = exit 1)
```

수집을 다시 돌려도 안전합니다 — 대장(`collect_log`)이 이미 받은 날짜를 건너뛰고,
예산(`call_budget`)이 한도 앞에서 멈춥니다.

### 수집 — 한 명령으로

```bash
python -m ingest                  # 시세·지수·거시를 순서대로, 실행 기록을 남기며
```

실행 하나가 `ingest_run` 한 행이고 출처별 단계가 `ingest_run_stage` 에 남습니다.
**밖에서(화면·API) "지금 도는 중인가"를 볼 수 있게** 만든 표입니다 (v8).

### 오전 — 팀원이 자료를 쓴다

```python
from supply import index_series
df = index_series(as_of="2026-09-01")   # as_of 를 빼면 그 자리에서 터진다
```

모델 학습용 대량 자료는 supply 가 아니라 **HF 배포본**으로 받습니다 —
DB(1,650 MB)는 공유하지 않고, 개발구간만 잘린 반출물을 공유합니다.

### 팀원이 파일을 보내온다

`data/inbox/` 에 넣고 반입 엔진을 돌리면 규격 판정 → 합격/격리 → 사람이 읽는
보고서(`reports/inbox/<날짜>/`)까지 나옵니다. 원본 파일은 **검증이 끝난 뒤에만**
지웁니다. 받는 방법 자체는 가이드 두 벌이 있습니다 —
[자동수집 가이드](../version2.3/자동수집_가이드.md)(API 로 받는 법) ·
[직접수집 가이드](../version2.4/직접수집_가이드.md)(브라우저로 받는 법 · cp949 처리).

---

## 2. 무엇을 만드는가

상태는 **이 표에만** 적습니다. v2.1 의 D-번호를 이어 쓰고, v2.1 이후 신설된
영역(반입·반출·실행기록)은 D-50 대 이후 번호를 새로 답니다.

### 2.1 공통 (D-00 ~ D-04)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-00 | `as_of` 없이는 과거를 못 본다 | ✅ | `tests/test_supply_boundary.py` |
| D-01 | 다시 받지 않고 원문에서 다시 만든다 | ✅ | `tests/test_renormalize.py` |
| D-02 | 안 받은 이유를 다섯으로 가른다 | ✅ | `tests/test_collect_log.py` |
| D-03 | 크롤링 전에 `robots.txt` 를 본다 | 🟡 | `tests/test_robots.py` · 부르는 곳 0건 (크롤러를 아직 안 만듦) |
| D-04 | 한도를 넘기 전에 우리가 먼저 센다 | 🟡 | `tests/test_budget.py` · **연결된 수집기 KRX·DART 둘** (2026-09-02 grep) |

### 2.2 자료를 받아 오는 곳 (D-10 ~ D-23)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-10 | 시세가 성한지 검사하고 아니면 멈춘다 | ✅ | `scripts/check_data.py` → `reports/data_quality.json` |
| D-11 | 하루 한 번 새것만 받는다 | ✅ | `tests/test_krx_store_collect_log.py` · `python -m ingest` |
| D-12 | **재무를 접수일 기준으로 쌓는다** | ✅ | **v6 에서 구현됨** — `dart_financial` 662,933행 · 350종 · FY2015~2025 · 접수일 100% (2026-09-02). 검사는 `scripts/check_dart.py` |
| D-13 | **거시 지표를 "알게 된 날"로 쌓는다** | ✅ | **v7 에서 구현됨** — `macro_series` 17,851행 · 9종 · `known_at` 포함 (2026-09-02). ⚠️ ECOS 는 발표일을 안 줘 `known_at` 은 **계산값** — 규칙을 바꾸면 재수집 |
| D-14 | 수정주가를 계산해 둔다 | 🟡 | **v9 로 확정** (#51) — `adj_open/high/low/close` 4칸 신설 · 소스 FDR + 자체 교차검증 3종 · 조정계수 실측 50.000·4.993·4.982 |
| D-20~23 | 뉴스·카페글·동영상 메타 | 🔴 | 미착수 (2·3차) |

### 2.3 팀원이 자료를 꺼내는 정문 (D-30 ~ D-32)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-30 | 함수 하나로 꺼내 쓴다 | ✅ | `tests/test_supply_price.py` |
| D-31 | 자료를 박제해 해시로 고정한다 | ✅ | 반출물마다 `MANIFEST.json` 에 SHA-256 · `verify_hf_dataset.py` 가 대조 |
| D-32 | 컬럼 뜻을 문서에서 읽는다 | ✅ | [ERD v2.0](../../erd/version2.0/ERD.md) (표 16개 전수) |

### 2.4 반입 — 남이 준 자료 (D-50 ~ D-52 · 신설)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-50 | 규격으로 행 단위 판정한다 (합격/격리/반려) | ✅ | `tests/test_inbox_engine.py` 외 5종 · [핵심코드 ②](../../핵심코드/version1.0/02-반입-엔진.md) |
| D-51 | 판정을 사람이 읽는 보고서로 낸다 | ✅ | `reports/inbox/<날짜>/` — 자료는 싣지 않는다 (Public 저장소) |
| D-52 | 손으로 받은 cp949 CSV 를 정규화한다 | ✅ | `scripts/normalize_manual.py` · `tests/test_normalize_manual.py` |

⚠️ 반입에 열린 빚: OR 규칙이 칸 하나만 없어도 통째로 스킵(#52) ·
`accepted_frame` 빈 표에 칸이 안 남음 + 보고서 파일명에 batch_id 없음(#45) ·
`aliases.close` 에 '수정종가'(#44).

### 2.5 반출·HF 배포 (D-60 ~ D-62 · 신설)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-60 | 개발구간만 잘라 반출한다 | ✅ | `verify_no_holdout` 전수 재검사 · [핵심코드 ④](../../핵심코드/version1.0/04-반출과-HF-배포.md) |
| D-61 | HF private 로 팀원에게 배포한다 | ✅ | `upload_to_hf.py` — private 을 서버에 재확인 · `--path-in-repo` 필수 |
| D-62 | "이미 최신인가"를 스크립트가 답한다 | ✅ | `verify_hf_dataset.py --skip-download` 종료코드 · 재배포는 세 경우뿐 |

### 2.6 실행 기록 (D-70 · 신설)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-70 | 수집이 지금 돌고 있는지 밖에서 본다 | ✅ | v8 — `ingest_run`·`ingest_run_stage` · `tests/test_run_log.py`. 화면·API 가 폴링할 표 |

### 2.7 화면 (이관)

D-40~43(수집 현황 화면)은 **2026-08-31 부로 강민석 님 담당**입니다.
스택은 Streamlit 으로 합의됐고, 화면이 읽을 재료(품질 JSON · 대장 · 예산 · 실행
기록)는 위 표들이 전부 준비해 둔 상태입니다. 화면 쪽 진행은 백테스팅 파트
문서를 참조하세요.

---

## 3. HF 배포 체계 — 파일은 HF 에, 방법은 저장소에

레포 둘, 층 둘입니다 (2026-09-02 실측).

| 레포 | 내용 | 구조 |
|---|---|---|
| `qurious-quant/alphastack-krx-dev` | KRX 시세 개발구간 반출 | 🔴 **반드시 private** (KRX 약관 제11조 ②) |
| `qurious-quant/alphastack-dart` | DART 재무 | **bulk/ 44파일**(접수일 없음 · 학습 금지 · 탐색용) + **pit/ 11파일**(662,933행 · 접수일 포함 · 학습은 이것만) |

- 학습 재무는 **pit/ 만** 씁니다. 시점은 `rcept_dt`(접수일) — 결산기준일로 붙이면
  아직 공시 안 된 값이 붙습니다(미래 누출, 실측: 핵심코드 ② 참조 노트북).
- 재배포는 세 경우뿐 — ①홀드아웃 경계 이동(#63·PR #71) ②개발구간 값 변경(#51)
  ③반출 규격 변경. **새 시세만으로는 안 올립니다.**
- PR #71(홀드아웃 20240901) 머지 시 개발구간이 5,989,308 → 7,888,945행(+31.7%)으로
  늘어 재배포가 필요해집니다. **v9(수정주가) 적재와 묶어 1회로** 올립니다.
- 팀원이 못 받으면 `scripts/check_hf_access.py` — `repo_type` 누락과 경로 접두사
  누락이 둘 다 404 로 같게 보입니다.

---

## 4. 데이터 사전

**[ERD v2.0](../../erd/version2.0/ERD.md) 으로 옮겼습니다** — 표 16개 전수를
`PRAGMA` 실측으로 그린 판입니다. 여기는 함정 요약만 남깁니다.

- 🔴 `daily_price` 의 가격은 **수정주가가 아닙니다** (#51). `close` 로 수익률을
  계산하면 삼성전자 분할일이 −98% 로 읽힙니다. v9 의 `adj_*` 4칸을 기다리세요.
- `code` 는 여섯 자리 **숫자가 아닙니다** — 5·6번째 자리에 영문 84종 (PR #40).
- `dart_financial` 을 직접 집계할 때 기본키에 `account_detail` 이 필수입니다 —
  빼면 자본변동표 6.4%(22,436행)가 조용히 사라집니다.
- `macro_series.known_at` 은 **계산값**입니다 (ECOS 가 발표일을 안 줌).
- CSV 는 float64 를 온전히 담지 못합니다 — 큰 수(시가총액)는 1 ULP 어긋나고
  빈 문자열이 NaN 이 됩니다. **팀원에게는 parquet 을 권합니다.**

---

## 5. 안 하는 것

| 무엇 | 언제 | 왜 |
|---|---|---|
| 공시 본문(`dart_disclosure`) 수집 | 3차 | 표만 파 둠(0행). 재무(전체 재무제표)가 먼저였다 |
| 뉴스·카페글·동영상 메타 | 2·3차 | Must 에 없다 |
| PostgreSQL / TimescaleDB | Won't | 팀원 4명이 각자 920만 행을 다시 적재해야 한다. 관련 경로는 죽은 코드로 동결 |
| 종목토론방 수집 | Won't | `robots.txt` 가 제3자 크롤러에게 전체 불허 |
| 이상치 자동 삭제 | Won't | 2020-03 급락은 실제 사건이다. 게이트는 "설명되지 않는 것"에만 건다 |
| 원 가격 칸을 수정주가로 **덮어쓰기** | Won't | 원자료 보존. 조정은 `adj_*` **별도 칸**으로 (v9) |

---

## 6. 지금 안고 있는 빚

| 무엇 | 크기 | 어떻게 할 것인가 |
|---|---|---|
| 수정주가 4칸 미적재 | 개별 종목 분석 전체가 대기 | **v9** (다음 세션) — FDR 커버리지 전 종목 실측 포함 |
| 오염 배포본 `data/outbox/2026-08-31` | 폴더 하나 | v9 재배포 때 처리 (#51 질문 2) |
| 반입 규칙 3건 (#52·#45·#44) | 판정 정확도 | 반입을 다시 만질 때 묶어서 |
| 예산 연결 KRX·DART 뿐 | ECOS 등은 `try_spend` 미연결 | 그 출처를 대량으로 부를 때 |
| `AsOfRequired` 가 안 던져진다 | 문서 여러 곳이 이 이름을 적음 | 정의·export 만 있고 `raise` 0곳 (2026-09-02 재확인). 실제로는 내장 `TypeError` — 문서 쪽을 고쳐 간다 |
| ~~`SealedRangeError`~~ | **코드에 없다** | 요구사항 F-04·v2.1 이 예외 방식으로 적었지만 실물은 "기본값 없는 `holdout_start` 인자 + 행 제거 + 제거량 보고" (2026-09-02 grep 전수 · [핵심코드 ③](../../핵심코드/version1.0/03-공급-정문-asof.md)) |
| `MANIFEST.json` 에 생성 커밋이 없다 | 재현 검증 불가 | 다음 재배포 때 git sha 를 넣는다 |
| Postgres 죽은 코드 1,428줄 | 세 파일 | 동결 유지 — `krx_store` 가 `CODE_PATTERN` 을 공유해 지우면 한글 검색이 죽는다 |

---

## 7. 다음 로드맵 (2026-09-02 합의)

| 순번 | 무엇 | 비고 |
|---|---|---|
| ⑧ | **마이그레이션 v9** — `adj_*` 4칸 + 실측 거래일 달력 (#51 닫기) | #71 머지돼 있으면 HF 재배포를 여기서 1회로 |
| ⑨ | 공공데이터포털 5종 | 키 5개 확보 · 이용허락 "제한 없음"이라 KRX 와 달리 재배포 가능 · 갱신 지연 실측부터 |
| ⑩ | FastAPI + Swagger + Windows 작업 스케줄러 | CLI 정본 · API 는 subprocess 껍데기 · `/docs` 가 팀 계약 문서 |
| 틈새 | KRX·공공데이터포털 갱신 시각 실측 | 아침 세션에서 (07:30·08:00·08:30 3콜) |

---

## 8. 용어집

| 말 | 뜻 |
|---|---|
| `as_of` | "언제 시점에서 본 자료인가". 이 값보다 뒤의 자료는 안 준다 |
| `known_at` | 그 자료를 **알 수 있었던 시각**. 시세는 T+1 0시(계산) · 재무는 접수일(기록) · 거시는 발표 규칙(계산) |
| pit / bulk | HF 재무의 두 층 — pit 은 접수일이 있어 학습 가능, bulk 는 없어서 탐색만 |
| 반입 / 반출 | 남이 준 파일을 들이는 것 / 팀원에게 내보내는 것 |
| 봉인 구간 | 최종 검증 전까지 열지 않는 홀드아웃. 경계 정본은 `evaluation/horizon.py` |
| 1 ULP | float64 의 마지막 비트 하나. CSV 왕복 표기 한계의 단위 |
| 기준가 조정 | 액면분할·증자로 기준가가 바뀌는 일. 과거 주가는 안 고쳐진다 → `adj_*` 4칸 |
| batch_id | 반입 묶음 열쇠 `<끝난시각>-<SHA-256 앞 12자>` |

---

## 부록 A. 왜 이렇게 만들었나

v2.1 부록 A(원문 보존 · 게이트 철학)는 그대로 유효합니다 —
[v2.1 부록 A](../version2.1/명세서.md#부록-a-왜-이렇게-만들었나) 를 보세요.
v3.0 에서 더해진 "왜"는 각 [핵심코드 문서](../../핵심코드/version1.0/)의 본문이
답합니다.

## 부록 B. 모듈 지도 (2026-09-02 실측)

`__init__.py` 포함 · 조사용 `_*.py` 제외 · `wc -l` 기준.

| 폴더 | 파일 | 줄 | 무엇 |
|---|---|---|---|
| `ingest/clients/` | 10 | 4,553 | 출처별 수집기 (KRX·DART·ECOS·FRED·KOSIS·FSS·yf·HF) |
| `ingest/store/` | 12 | 4,308 | 저장·대장·마이그레이션·실행기록 |
| `ingest/inbox/` | 7 | 2,674 | 반입 엔진 (규격 5종 포함) |
| `common/` | 11 | 2,982 | 예산·원문보존·robots·달력·설정 |
| `supply/` | 4 | 591 | 공급 정문 (`as_of` 강제) |
| `features/` | 5 | 706 | 지표 (신장환) |
| `evaluation/` | 5 | 848 | 검증 엔진 |
| `models/` | 5 | 435 | 모델 팩토리 (오준영) |
| `timeseries/` | 9 | 2,085 | 시계열 도구 |
| `scripts/` | 24 | 6,773 | CLI (반출·검증·HF 포함) |
| `tests/` | 40 | 8,933 | **813 passed + 3 xfailed** (2026-09-02 · 148.9s) |
| `pipelines/` | 2 | 305 | 파이프라인 |

## 부록 C. 수업에서 배운 것과 우리 자료

[v2.1 부록 C](../version2.1/명세서.md#부록-c-수업에서-배운-것과-우리-자료) 가
그대로 유효합니다 (룩어헤드·생존편향·수업 지침을 그대로 쓰면 안 되는 곳 대조표).
v3.0 이후 수업이 진행되며 늘어난 것은 각 세션 TIL 에 이어 적습니다.

## 부록 D. 이 문서를 쓰는 규칙

[v2.1 부록 D](../version2.1/명세서.md#부록-d-이-문서를-쓰는-규칙) 를 따릅니다 —
굵게 절제 · 이모지 4종(🔴🟡✅⚠️) · 모든 숫자에 잰 날짜 · 상태는 2절에만 ·
제목은 "할 수 있는 일"로.
