docs/데이터파트/version3.2/명세서.md
# 데이터 파트 명세서 (v3.2)

> 담당 이동원 — 수집 · 저장 · 정제 · 전처리 · **반입 · 반출(HF)** · 🆕 **고도화 설계**
> (수집 현황 **화면은 2026-08-31 부로 강민석 님 담당**으로 이관)
> v3.2 · 2026-09-03 · 이전 판 [v3.0 명세서](../version3.0/명세서.md)(전문) +
> 부분판 [v3.1](../version3.1/)(원가격 결함 수정 · API 키 가이드 · 공공데이터포털 설계) · [변경사항](변경사항.md)
> 팀 전체 요구사항은 [요구사항](../../요구사항/README.md)

이 문서는 **읽는 사람이 "무엇이 만들어지는가"를 먼저 알게** 쓰였습니다.
숫자에는 잰 날짜를 붙였습니다 — 수집이 돌면 숫자가 움직이기 때문입니다.

🆕 v3.2 는 **고도화 설계**를 등재한 판입니다 — HF 인코더 원격 추론(텍스트 신호) ·
버튼 갱신 파이프라인 · 비LLM 에이전트 관측 규격 · GitHub Stars 벤치마킹 · 강사님 저장소
도입. 전부 **설계만**이고 상태표(§2)에 🔴 계획으로 올렸습니다. 설계 전문은
[고도화 설계](고도화_설계.md) · [강사님 저장소 분석과 도입 설계](강사님저장소_분석과_도입설계.md).

---

## 0. 이 파트가 끝나면 팀원이 할 수 있는 것

| 누가 | 무엇을 | 어떻게 |
|---|---|---|
| 오준영 (모델) | 학습 표를 받아 쓴다 | HF `alphastack-krx-dev` 에서 `hf_hub_download()` 한 줄 |
| 오준영 (모델) | 재무를 시점 정합으로 붙인다 | HF `alphastack-dart` 의 **pit/** 층 (시점은 `rcept_dt`) |
| 강민석 (백테스팅) | 봉인 구간이 반출물에 없음을 믿는다 | `verify_no_holdout` 이 전 파일을 전수 재검사한다 |
| 신장환 (피처) | 지표 함수에 넣을 표의 모양을 안다 | 계약 테스트가 컬럼·정렬·dtype 을 고정한다 |
| 팀 전체 | 손으로 받은 CSV 를 안전하게 들인다 | 반입 엔진이 규격으로 판정하고 보고서를 준다 |
| 팀 전체 | 발표 때 "이 숫자 어디서 났나"에 답한다 | 수집 대장 + 실행 기록 + MANIFEST 해시 |

각 기능의 줄 단위 해설은 **[핵심코드 v1.0](../../핵심코드/version1.0/)** 에
있습니다 (①수집 ②반입 ③공급 ④반출·HF). 이 문서는 전체 지도를 그립니다.

---

## 1. 하루를 따라가 보기

### 아침 — 어제 자료가 잘 들어왔나

```bash
python scripts/check_db.py        # 표 19개의 행 수·기간 한 장
python scripts/check_keys.py --live   # 키 10종이 실제로 통하는지 (v3.1)
python scripts/check_data.py      # 시세 품질 게이트 (설명되지 않는 이상치 = exit 1)
```

수집을 다시 돌려도 안전합니다 — 대장(`collect_log`)이 이미 받은 날짜를 건너뛰고,
예산(`call_budget`)이 한도 앞에서 멈춥니다.

### 수집 — 한 명령으로

```bash
python -m ingest                  # 시세·지수·거시를 순서대로, 실행 기록을 남기며
```

실행 하나가 `ingest_run` 한 행이고 출처별 단계가 `ingest_run_stage` 에 남습니다.
**밖에서(화면·API) "지금 도는 중인가"를 볼 수 있게** 만든 표입니다 (v8).

### 오전 — 팀원이 자료를 쓴다

```python
from supply import index_series
df = index_series(as_of="2026-09-01")   # as_of 를 빼면 그 자리에서 터진다
```

모델 학습용 대량 자료는 supply 가 아니라 **HF 배포본**으로 받습니다 —
DB(1,975 MB · 2026-09-03)는 공유하지 않고, 개발구간만 잘린 반출물을 공유합니다.

### 팀원이 파일을 보내온다

`data/inbox/` 에 넣고 반입 엔진을 돌리면 규격 판정 → 합격/격리 → 사람이 읽는
보고서(`reports/inbox/<날짜>/`)까지 나옵니다. 원본 파일은 **검증이 끝난 뒤에만**
지웁니다. 받는 방법 자체는 가이드 두 벌이 있습니다 —
[자동수집 가이드](../version2.3/자동수집_가이드.md)(API 로 받는 법) ·
[직접수집 가이드](../version2.4/직접수집_가이드.md)(브라우저로 받는 법 · cp949 처리).

---

## 2. 무엇을 만드는가

상태는 **이 표에만** 적습니다. v2.1 의 D-번호를 이어 쓰고, v2.1 이후 신설된
영역(반입·반출·실행기록)은 D-50 대 이후 번호를 새로 답니다. **v3.2 고도화는 D-80 대부터**
(텍스트 신호 D-80 · 갱신 파이프라인 D-90 · 관측 규격 D-100)이고 전부 🔴 계획입니다.

### 2.1 공통 (D-00 ~ D-04)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-00 | `as_of` 없이는 과거를 못 본다 | ✅ | `tests/test_supply_boundary.py` |
| D-01 | 다시 받지 않고 원문에서 다시 만든다 | ✅ | `tests/test_renormalize.py` |
| D-02 | 안 받은 이유를 다섯으로 가른다 | ✅ | `tests/test_collect_log.py` |
| D-03 | 크롤링 전에 `robots.txt` 를 본다 | 🟡 | `tests/test_robots.py` · 부르는 곳 0건 (크롤러를 아직 안 만듦) |
| D-04 | 한도를 넘기 전에 우리가 먼저 센다 | 🟡 | `tests/test_budget.py` · **연결된 수집기 KRX·DART 둘** (2026-09-02 grep) · HF 원격 추론은 D-83 으로 예정 |

### 2.2 자료를 받아 오는 곳 (D-10 ~ D-23)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-10 | 시세가 성한지 검사하고 아니면 멈춘다 | ✅ | `scripts/check_data.py` → `reports/data_quality.json` |
| D-11 | 하루 한 번 새것만 받는다 | ✅ | `tests/test_krx_store_collect_log.py` · `python -m ingest` |
| D-12 | **재무를 접수일 기준으로 쌓는다** | ✅ | **v6 에서 구현됨** — `dart_financial` 662,933행 · 350종 · FY2015~2025 · 접수일 100% (2026-09-02). 검사는 `scripts/check_dart.py` |
| D-13 | **거시 지표를 "알게 된 날"로 쌓는다** | ✅ | **v7 에서 구현됨** — `macro_series` 17,851행 · 9종 · `known_at` 포함 (2026-09-02). ⚠️ ECOS 는 발표일을 안 줘 `known_at` 은 **계산값** — 규칙을 바꾸면 재수집 |
| D-14 | 수정주가를 계산해 둔다 | ✅ | **v9 에서 구현됨** (#51 · PR #78) — `adj_open/high/low/close` 4칸 · 9,223,644행 **100%** (2026-09-03) · 소스 FDR + 이어붙이기 오차 ≤0.4% · 🔴 반출도 `adj_*` 기준으로 고침 (v3.1 · #80) |
| D-20~23 | 뉴스·카페글·동영상 메타 | 🔴 | 미착수 (2·3차) |

### 2.3 팀원이 자료를 꺼내는 정문 (D-30 ~ D-32)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-30 | 함수 하나로 꺼내 쓴다 | ✅ | `tests/test_supply_price.py` |
| D-31 | 자료를 박제해 해시로 고정한다 | ✅ | 반출물마다 `MANIFEST.json` 에 SHA-256 · `verify_hf_dataset.py` 가 대조 |
| D-32 | 컬럼 뜻을 문서에서 읽는다 | ✅ | [ERD v2.0](../../erd/version2.0/ERD.md) (표 16개 전수) |

### 2.4 반입 — 남이 준 자료 (D-50 ~ D-52 · 신설)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-50 | 규격으로 행 단위 판정한다 (합격/격리/반려) | ✅ | `tests/test_inbox_engine.py` 외 5종 · [핵심코드 ②](../../핵심코드/version1.0/02-반입-엔진.md) |
| D-51 | 판정을 사람이 읽는 보고서로 낸다 | ✅ | `reports/inbox/<날짜>/` — 자료는 싣지 않는다 (Public 저장소) |
| D-52 | 손으로 받은 cp949 CSV 를 정규화한다 | ✅ | `scripts/normalize_manual.py` · `tests/test_normalize_manual.py` |

⚠️ 반입에 열린 빚: OR 규칙이 칸 하나만 없어도 통째로 스킵(#52) ·
`accepted_frame` 빈 표에 칸이 안 남음 + 보고서 파일명에 batch_id 없음(#45) ·
`aliases.close` 에 '수정종가'(#44).

### 2.5 반출·HF 배포 (D-60 ~ D-62 · 신설)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-60 | 개발구간만 잘라 반출한다 | ✅ | `verify_no_holdout` 전수 재검사 · [핵심코드 ④](../../핵심코드/version1.0/04-반출과-HF-배포.md) |
| D-61 | HF private 로 팀원에게 배포한다 | ✅ | `upload_to_hf.py` — private 을 서버에 재확인 · `--path-in-repo` 필수 |
| D-62 | "이미 최신인가"를 스크립트가 답한다 | ✅ | `verify_hf_dataset.py --skip-download` 종료코드 · 재배포는 세 경우뿐 |

### 2.6 실행 기록 (D-70 · 신설)

| ID | 할 수 있는 일 | 상태 | 확인 방법 |
|---|---|---|---|
| D-70 | 수집이 지금 돌고 있는지 밖에서 본다 | ✅ | v8 — `ingest_run`·`ingest_run_stage` · `tests/test_run_log.py`. 화면·API 가 폴링할 표 |

### 2.7 화면 (이관)

D-40~43(수집 현황 화면)은 **2026-08-31 부로 강민석 님 담당**입니다.
스택은 Streamlit 으로 합의됐고, 화면이 읽을 재료(품질 JSON · 대장 · 예산 · 실행
기록)는 위 표들이 전부 준비해 둔 상태입니다. 화면 쪽 진행은 백테스팅 파트
문서를 참조하세요.

### 2.8 🆕 텍스트 신호 — 공시 제목을 수치 칸으로 (D-80 ~ D-84 · v3.2 설계)

전문은 [고도화 설계 §2](고도화_설계.md). 원료는 **DART 공시 제목**(뉴스는 약관 미결 · 2차),
모델은 라이선스 명시 + 원격 제공 확인된 6종 중 **제로샷 `xlm-roberta-large-xnli`(MIT)** 로
시작합니다. 우리 HF 토큰에 원격 추론 권한이 없어 처음엔 호출한 인코더 14종이 전부 403 이었고,
팀장이 같은 날 권한을 켠 뒤 재실측해 **라이선스 명시 6종이 실제로 돌았습니다**(한국어 제로샷
긍정 0.988 · 콜드 스타트 최대 24.9초 · [고도화 설계 §1.5](고도화_설계.md)).

| ID | 할 수 있는 일 | 상태 | 확인 방법 (계획) |
|---|---|---|---|
| D-80 | 공시 목록을 접수일과 함께 쌓는다 (`dart_disclosure` 채우기) | 🔴 | `fetch_disclosures` 는 있다 · 표는 v6 에 있고 **0행** (2026-09-03) |
| D-81 | 제목을 원격 추론으로 긍/부/중 **확률 3칸**으로 바꾼다 | 🔴 | `ingest/clients/hf_data.classify()` 재사용 · 배치 64 · 응답 순서 대응 테스트 |
| D-82 | "알게 된 날"을 접수일 **다음 거래일 00:00** 으로 센다 | 🔴 | 계산값(거시와 같은 규약) · `trading_calendar` · 위반 0행 테스트 |
| D-83 | HF 호출도 예산으로 먼저 센다 (PRO 월 $2.00 · **상한 $1.50 제안** · 80% 에 알림) | 🔴 | `common/budget.py` 출처 `hf_inference` · 단가는 다음 세션 실측 · [고도화 설계 §2.5](고도화_설계.md) |
| D-84 | 별도 파일 `text_signal_dev.parquet` 로 반출한다 (칸을 늘리지 않는다) | 🔴 | 재배포 3조건 ③ 회피 · 피처 결합은 `features/`(신장환) 경계 |

저장은 마이그레이션 **v11** `text_signal` 표입니다(v10 은 공공데이터포털 매핑이 먼저).

### 2.9 🆕 버튼 갱신 파이프라인 — 한 명령 · 잠금 (D-90 ~ D-92 · v3.2 설계)

전문은 [고도화 설계 §3](고도화_설계.md). 수집 → 게이트 → 판정 → (필요할 때만) 반출·HF 를
`python -m pipelines.refresh` 하나로 잇습니다. 버튼 배선은 강민석 님 화면입니다.

| ID | 할 수 있는 일 | 상태 | 확인 방법 (계획) |
|---|---|---|---|
| D-90 | 두 번 눌러도 한 번만 돈다 (파일 잠금 · 즉시 `busy` 반환) | 🔴 | `filelock`(MIT) · `data/refresh.lock` · `timeout=0` · 동시 실행 테스트 |
| D-91 | 며칠 안 눌러도 구멍이 없다 (DB 마지막 거래일 → 오늘을 달력으로 센다) | 🔴 | 고정 `--days 10` 을 버린다 · 달력 계산 테스트 |
| D-92 | 게이트 실패면 HF 로 가지 않고, 최신이면 올리지 않는다 | 🔴 | `check_data` exit 1 → 중단 · `verify_hf_dataset` 이 **2** 일 때만 업로드 · `ingest_run_stage` 에 `gate·verify·export·upload` |

### 2.10 🆕 에이전트 관측 규격 — 2·3차 계약 (D-100 · 명세만)

전문은 [고도화 설계 §4](고도화_설계.md). LLM 을 쓰지 않는 에이전트(강화학습·국면 규칙)가
읽을 **고정 차원 배열** `(W, F)` 의 칸 순서·결측 마스크·스케일 규약을 문서로 고정합니다.
`supply` 정문을 그대로 재사용하므로 2·3차에서 데이터 코드를 고치지 않습니다.

| ID | 할 수 있는 일 | 상태 | 확인 방법 (계획) |
|---|---|---|---|
| D-100 | `supply.observation(target, as_of=…, window=W)` 가 `(W, F)` float32 를 준다 | 🔴 2차 | 계약 테스트 자리 `tests/test_observation_contract.py` (칸 순서 · shape · 마스크 · `as_of` 없이는 안 열림) |

---

## 3. HF 배포 체계 — 파일은 HF 에, 방법은 저장소에

레포 둘, 층 둘입니다 (2026-09-02 실측).

| 레포 | 내용 | 구조 |
|---|---|---|
| `qurious-quant/alphastack-krx-dev` | KRX 시세 개발구간 반출 | 🔴 **반드시 private** (KRX 약관 제11조 ②) |
| `qurious-quant/alphastack-dart` | DART 재무 | **bulk/ 44파일**(접수일 없음 · 학습 금지 · 탐색용) + **pit/ 11파일**(662,933행 · 접수일 포함 · 학습은 이것만) |

- 학습 재무는 **pit/ 만** 씁니다. 시점은 `rcept_dt`(접수일) — 결산기준일로 붙이면
  아직 공시 안 된 값이 붙습니다(미래 누출, 실측: 핵심코드 ② 참조 노트북).
- 재배포는 세 경우뿐 — ①홀드아웃 경계 이동(#63·PR #71) ②개발구간 값 변경(#51)
  ③반출 규격 변경. **새 시세만으로는 안 올립니다.**
- 2026-09-02 에 v9 와 묶어 **재배포했습니다** — 7,888,945행 × 20칸(+31.7%) + `PROFILE.json`
  (칸 181개 통계) + 카드 40KB. 2026-09-03 재반출은 파일 8개 중 `features_labels_stocks30_dev.csv`
  **하나만** 바뀌었습니다(#80 · 나머지 7개는 SHA-256 동일).
- 텍스트 신호(D-84)는 **별도 파일** `text_signal_dev.parquet` 로 냅니다 — 기존 파일에 칸을
  더하면 위 ③ 에 걸려 재배포가 나기 때문입니다.
- 팀원이 못 받으면 `scripts/check_hf_access.py` — `repo_type` 누락과 경로 접두사
  누락이 둘 다 404 로 같게 보입니다.

---

## 4. 데이터 사전

**[ERD v2.2](../../erd/version2.2/ERD.md) 으로 옮겼습니다** — 표 19개 전수를
`PRAGMA` 실측으로 그린 판입니다. 여기는 함정 요약만 남깁니다.

- 🔴 `close` 는 KRX 원문 그대로라 **수정주가가 아닙니다**. 수익률·라벨·모멘텀은
  `adj_close`, 변동성은 `adj_high/low/open`, **시가총액만** `close` 입니다(v9 · #51).
  거래정지일의 `adj_open/high/low` 는 NaN 입니다 — 0 으로 채우면 "그날 0원" 이 됩니다.
- `code` 는 여섯 자리 **숫자가 아닙니다** — 5·6번째 자리에 영문 84종 (PR #40).
- `dart_financial` 을 직접 집계할 때 기본키에 `account_detail` 이 필수입니다 —
  빼면 자본변동표 6.4%(22,436행)가 조용히 사라집니다.
- `macro_series.known_at` 은 **계산값**입니다 (ECOS 가 발표일을 안 줌).
- CSV 는 float64 를 온전히 담지 못합니다 — 큰 수(시가총액)는 1 ULP 어긋나고
  빈 문자열이 NaN 이 됩니다. **팀원에게는 parquet 을 권합니다.**

---

## 5. 안 하는 것

| 무엇 | 언제 | 왜 |
|---|---|---|
| 공시 본문(`dart_disclosure`) 수집 | 3차 | 표만 파 둠(0행). 재무(전체 재무제표)가 먼저였다 |
| 뉴스·카페글·동영상 메타 | 2·3차 | Must 에 없다 |
| PostgreSQL / TimescaleDB | Won't | 팀원 4명이 각자 920만 행을 다시 적재해야 한다. 관련 경로는 죽은 코드로 동결 |
| 종목토론방 수집 | Won't | `robots.txt` 가 제3자 크롤러에게 전체 불허 |
| 이상치 자동 삭제 | Won't | 2020-03 급락은 실제 사건이다. 게이트는 "설명되지 않는 것"에만 건다 |
| 원 가격 칸을 수정주가로 **덮어쓰기** | Won't | 원자료 보존. 조정은 `adj_*` **별도 칸**으로 (v9) |
| 뉴스 원문·제목을 DB 에 저장 | 2차 (팀 판단 후) | 네이버 약관 7.3 ③ **"저장(캐시 행위 포함)"** 금지 — 점수만 남기는 안도 법적 판단이 먼저(계획서 부록 G ④) |
| 생성형 모델 (NuExtract·ReaderLM·Gemma 류) · 모델 로컬 다운로드 · 파인튜닝 | Won't (예외는 먼저 묻는다) | 절대 제약 — 인코더 원격 추론까지 |
| Actions 가 저장소에 **커밋** (강사님 `test.yml` 패턴) | Won't | 자동 대량 활동 판정에 가장 가깝다 · [도입 설계 §4](강사님저장소_분석과_도입설계.md) |

---

## 6. 지금 안고 있는 빚

| 무엇 | 크기 | 어떻게 할 것인가 |
|---|---|---|
| ~~수정주가 4칸 미적재~~ | **닫힘** | v9 (2026-09-02 · PR #78) · 반출 경로까지 고침 (v3.1 · #80) |
| ~~HF 토큰에 원격 추론 권한 없음~~ | **닫힘** (2026-09-03 11:5x) | 권한 추가 후 6종 실호출 확인 ([고도화 설계 §1.5](고도화_설계.md)). 남은 것은 **단가 실측**과 `check_keys.py --live` 의 추론 권한 검사 |
| `verify_hf_dataset.py` 가 피처·라벨을 안 본다 | #80 류 사고를 못 잡는다 | 원시 자료 대조에 피처·라벨 대조를 더한다 (v3.1 §6) |
| `trading_calendar.next_session()` 선형 탐색 | 4,102개 · 행마다 | 이진탐색 — D-91 창 계산이 이 함수를 쓴다 |
| `--days 10` 고정 창 | 열흘 넘게 안 돌리면 앞이 빈다 | D-91 |
| 오염 배포본 `data/outbox/2026-08-31` | 폴더 하나 (로컬) | v9 재배포(9/2) 뒤 상태 **미확인** — 다음 반출 때 지운다 |
| 반입 규칙 3건 (#52·#45·#44) | 판정 정확도 | 반입을 다시 만질 때 묶어서 |
| 예산 연결 KRX·DART 뿐 | ECOS 등은 `try_spend` 미연결 · HF 는 D-83 | 그 출처를 대량으로 부를 때 |
| `AsOfRequired` 가 안 던져진다 | 문서 여러 곳이 이 이름을 적음 | 정의·export 만 있고 `raise` 0곳 (2026-09-02 재확인). 실제로는 내장 `TypeError` — 문서 쪽을 고쳐 간다 |
| ~~`SealedRangeError`~~ | **코드에 없다** | 요구사항 F-04·v2.1 이 예외 방식으로 적었지만 실물은 "기본값 없는 `holdout_start` 인자 + 행 제거 + 제거량 보고" (2026-09-02 grep 전수 · [핵심코드 ③](../../핵심코드/version1.0/03-공급-정문-asof.md)) |
| `MANIFEST.json` 에 생성 커밋이 없다 | 재현 검증 불가 | 다음 재배포 때 git sha 를 넣는다 |
| Postgres 죽은 코드 1,428줄 | 세 파일 | 동결 유지 — `krx_store` 가 `CODE_PATTERN` 을 공유해 지우면 한글 검색이 죽는다 |

---

## 7. 다음 로드맵 (2026-09-03 재배열 · 고도화 반영)

| 순번 | 무엇 | 상태 · 비고 |
|---|---|---|
| ⑧ | 마이그레이션 v9 — `adj_*` 4칸 + 실측 거래일 달력 | ✅ 2026-09-02 (PR #78) · HF 재배포 동반 |
| ⑨ | 공공데이터포털 — `종목코드 ↔ 법인등록번호 ↔ ISIN` 매핑 · 상장·폐지일 | 설계 ✅ (v3.1) → **구현 v10** · 키는 하나(Encoding/Decoding 함정) |
| ⑩ | FastAPI — **강사님 골격**(pydantic · `/health` · Swagger) + `supply` 껍데기 + `/runs` + `/refresh` | 설계 ✅ ([도입 설계 §3](강사님저장소_분석과_도입설계.md)) · CLI 정본 |
| ⑪ | **갱신 파이프라인** `pipelines/refresh.py` + `filelock` (D-90~92) | 설계 ✅ ([고도화 설계 §3](고도화_설계.md)) · v10 과 독립이라 먼저 가능 |
| ⑫ | **텍스트 신호** v11 `text_signal` (D-80~84) | 설계 ✅ · 🔴 HF 토큰 권한이 선행 |
| CI | `.github/workflows/ci.yml` — 검사만 · `act` 로컬 검증 | 설계 ✅ ([도입 설계 §4](강사님저장소_분석과_도입설계.md)) · **팀 합의(이슈) 후** |
| 2차 | 관측 규격 구현 (D-100) · GitHub 활동 팩터 트랙 · 뉴스(약관 판단 후) | 명세 ✅ · 개수 실측부터 |
| 틈새 | KRX·공공데이터포털 갱신 시각 실측 | 아침 세션에서 (07:30·08:00·08:30 3콜) |

---

## 8. 용어집

| 말 | 뜻 |
|---|---|
| `as_of` | "언제 시점에서 본 자료인가". 이 값보다 뒤의 자료는 안 준다 |
| `known_at` | 그 자료를 **알 수 있었던 시각**. 시세는 T+1 0시(계산) · 재무는 접수일(기록) · 거시는 발표 규칙(계산) |
| pit / bulk | HF 재무의 두 층 — pit 은 접수일이 있어 학습 가능, bulk 는 없어서 탐색만 |
| 반입 / 반출 | 남이 준 파일을 들이는 것 / 팀원에게 내보내는 것 |
| 봉인 구간 | 최종 검증 전까지 열지 않는 홀드아웃. 경계 정본은 `evaluation/horizon.py` |
| 1 ULP | float64 의 마지막 비트 하나. CSV 왕복 표기 한계의 단위 |
| 기준가 조정 | 액면분할·증자로 기준가가 바뀌는 일. 과거 주가는 안 고쳐진다 → `adj_*` 4칸 |
| batch_id | 반입 묶음 열쇠 `<끝난시각>-<SHA-256 앞 12자>` |

---

## 부록 A. 왜 이렇게 만들었나

v2.1 부록 A(원문 보존 · 게이트 철학)는 그대로 유효합니다 —
[v2.1 부록 A](../version2.1/명세서.md#부록-a-왜-이렇게-만들었나) 를 보세요.
v3.0 에서 더해진 "왜"는 각 [핵심코드 문서](../../핵심코드/version1.0/)의 본문이
답합니다.

## 부록 B. 모듈 지도 (2026-09-03 실측)

`__init__.py` 포함 · 조사용 `_*.py` 제외 · `wc -l` 기준.

| 폴더 | 파일 | 줄 | 무엇 |
|---|---|---|---|
| `ingest/` (clients·store·inbox) | 33 | 12,368 | 출처별 수집기 · 저장·대장·마이그레이션(v9)·실행기록 · 반입 엔진 |
| `common/` | 12 | 3,227 | 예산·원문보존·robots·달력·설정 · 🆕 `export_profile` |
| `supply/` | 5 | 683 | 공급 정문 (`as_of` 강제) · `model_data` |
| `features/` | 5 | 712 | 지표 (신장환) |
| `evaluation/` | 7 | 3,067 | 검증 엔진 · 강민석 님 지표 2편 (`evaluation_backtest`·`evaluation_risk`) |
| `models/` | 5 | 435 | 모델 팩토리 (오준영) |
| `timeseries/` | 9 | 2,085 | 시계열 도구 |
| `scripts/` | 27 | 7,934 | CLI (반출·검증·HF·키 점검·프로파일 포함) |
| `tests/` | 54 | 10,724 | **924 passed + 3 xfailed** (2026-09-03 · 258.7s · v10 머지 뒤) |
| `pipelines/` | 2 | 305 | `ingest` 구현 · `refresh` 는 설계(D-90) |
| `api/` | 1 | 28 | 빈 껍데기 — 로드맵 ⑩ |

## 부록 C. 수업에서 배운 것과 우리 자료

[v2.1 부록 C](../version2.1/명세서.md#부록-c-수업에서-배운-것과-우리-자료) 가
그대로 유효합니다 (룩어헤드·생존편향·수업 지침을 그대로 쓰면 안 되는 곳 대조표).
v3.0 이후 수업이 진행되며 늘어난 것은 각 세션 TIL 에 이어 적습니다.

## 부록 D. 이 문서를 쓰는 규칙

[v2.1 부록 D](../version2.1/명세서.md#부록-d-이-문서를-쓰는-규칙) 를 따릅니다 —
굵게 절제 · 이모지 4종(🔴🟡✅⚠️) · 모든 숫자에 잰 날짜 · 상태는 2절에만 ·
제목은 "할 수 있는 일"로.
